# real_time_multimodal_emotion_recognition

./: README.md
ros/demos/chatbot_emotion/: CMakeLists.txt  README.md  package.xml
ros/demos/chatbot_emotion/chat_tools/: emotion_chat_tools.json
ros/demos/chatbot_emotion/include/chatbot_emotion/tools/: chatbot_emotion_tools.hpp
ros/demos/chatbot_emotion/launch/: chatbot.launch.xml
ros/demos/chatbot_emotion/prompts/: emotion_experiment_en.json  emotion_experiment_fr.json
ros/demos/chatbot_emotion/src/: chatbot_emotion_node.cpp  chatbot_emotion_state_machine_node.cpp
ros/demos/chatbot_emotion/src/tools/: chatbot_emotion_tools.cpp
ros/demos/chatbot_gui_emotion/: CMakeLists.txt  package.xml
ros/demos/chatbot_gui_emotion/src/: chatbot_gui_emotion_node.cpp
ros/demos/chatbot_gui_emotion/src/widgets/: FaceView.cpp  FaceView.h  MainWindow.cpp  MainWindow.h  UserSelectorDialog.cpp  UserSelectorDialog.h
ros/perceptions/emotion_recognition/: CMakeLists.txt  package.xml
ros/perceptions/emotion_recognition/launch/: emotion_recognition.launch.xml
ros/perceptions/emotion_recognition/scripts/: emotion_recognition_node.py
ros/perceptions/perception_msgs/msg/: PersonInfo.msg
ros/utils/dnn_utils/dnn_utils/: emotion_recognition.py
