<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chatbot_emotion</name>
  <version>0.0.0</version>
  <description>chatbot_emotion demo</description>
  <maintainer email="hui.chen@usherbrooke.ca">Hui Chen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>chat</depend>
  <depend>rclcpp</depend>
  <depend>t_top_hbba_lite</depend>
  <depend>t_top_move_hbba_lite</depend>
  <depend>perception_msgs</depend>
  <depend>behavior_msgs</depend>
  <depend>behavior_srvs</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>cloud_data</depend>
  <depend>perceptions_analyzer</depend>
  <depend>chatbot</depend>
  <depend>opentera_link_srvs</depend>
  <depend>opentera_link_msgs</depend>
  <depend>states</depend>

  <depend>fmt</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
